--- a/css/responsive/summary-responssive-base.css
+++ b/css/responsive/summary-responssive-base.css
@@ -27,6 +27,7 @@
 
 /* Für mittlere Bildschirme */
 @media (max-width: 1100px) {
+
   h2,
   h1 {
     font-size: 47px;
@@ -44,7 +45,8 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 71px);
+
     background-color: white;
     align-items: center;
     z-index: 999;
@@ -55,6 +57,7 @@
     0% {
       opacity: 1;
     }
+
     100% {
       opacity: 0;
       display: none;
@@ -126,7 +129,7 @@
 /* Für kleinere Bildschirme */
 @media (max-width: 900px) {
   .summary-header {
-    padding: 1.5rem;
+    padding: 0rem;
     max-width: 90%;
     gap: 10px;
   }
@@ -199,7 +202,7 @@
   }
 
   .urgent-wrapper {
-    flex-direction: row; 
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
@@ -212,7 +215,7 @@
     flex-direction: row;
     gap: 6px;
     padding: 0.4rem;
-    width: 48%; 
+    width: 48%;
     max-width: 48%;
   }
 
@@ -226,11 +229,14 @@
 }
 
 @media (max-width: 400px) {
-  h2, h1 {
+
+  h2,
+  h1 {
     font-size: 40px;
   }
 
-  .summary-box span, #deadline-title {
+  .summary-box span,
+  #deadline-title {
     font-size: 16px;
   }
 }
